--- a/.github/workflows/apply-patches.yml
+++ b/.github/workflows/apply-patches.yml
@@ -121,6 +121,7 @@ jobs:
 
       - name: Sync/Merge With Upstream
         run: |
+          git fsck --full --no-dangling
           git checkout main
           git merge --no-commit --no-ff upstream/main
           git reset -- ./.github
