--- a/.github/workflows/apply-patches.yml
+++ b/.github/workflows/apply-patches.yml
@@ -104,6 +104,8 @@ jobs:
 
       - name: Checkout Upstream Changes
         run: |
+          set -x
+          set -e
           git checkout upstream/main -- .
 
           git reset HEAD .github .vscode
@@ -121,7 +123,8 @@ jobs:
 
       - name: Sync/Merge With Upstream
         run: |
-          git fsck --full --no-dangling
+          set -x
+          set -e
           git checkout main
           git merge --no-commit --no-ff upstream/main
           git reset -- ./.github
@@ -129,6 +132,8 @@ jobs:
 
       - name: Commit & Push Changes
         run: |
+          set -x
+          set -e
           git reset HEAD .github .vscode
           git restore --staged .github .vscode
           git add -- ':!./.github' ':!./.vscode'
