--- a/.github/workflows/apply-patches.yml
+++ b/.github/workflows/apply-patches.yml
@@ -106,14 +106,14 @@ jobs:
         run: |
           set -x
           set -e
-          git checkout upstream/main #-- .
+          git checkout upstream/main -- .
 
           git reset HEAD .github .vscode
           git restore --staged .github .vscode
           git add -- ':!./.github' ':!./.vscode'
 
-          git commit -m "[pre-patch] Update from upstream at ${{ steps.date.outputs.RUN_DATE_TIME }}"
-          git push origin main
+          git commit -m "[pre-patch] Update from upstream at ${{ steps.date.outputs.RUN_DATE_TIME }}" || true
+          git push origin main || true
 
       - name: Apply Patches
         run: |
