--- a/.github/workflows/apply-patches.yml
+++ b/.github/workflows/apply-patches.yml
@@ -127,6 +127,9 @@ jobs:
           set -e
           git checkout main
 
+          git checkout -f HEAD
+          rm .git/index
+          git reset
           git fsck --full --no-dangling
 
           git merge --no-commit --no-ff upstream/main
