--- a/.github/workflows/apply-patches.yml
+++ b/.github/workflows/apply-patches.yml
@@ -127,10 +127,10 @@ jobs:
           set -e
           git checkout main
 
-          git checkout -f HEAD
-          rm .git/index
-          git reset
-          git fsck --full --no-dangling
+          #git checkout -f HEAD
+          #rm .git/index
+          #git reset
+          #git fsck --full --no-dangling
 
           git merge --no-commit --no-ff upstream/main
           git reset -- ./.github
