--- a/.github/workflows/apply-patches.yml
+++ b/.github/workflows/apply-patches.yml
@@ -130,7 +130,7 @@ jobs:
           #git checkout -f HEAD
           #rm .git/index
           #git reset
-          #git fsck --full --no-dangling
+          git fsck --full --no-dangling
 
           git merge --no-commit --no-ff upstream/main || true
           git reset -- ./.github || true
