--- a/___patching/workflows/apply-patches.yml
+++ b/___patching/workflows/apply-patches.yml
@@ -108,6 +108,12 @@ jobs:
           set -e
           git checkout upstream/main -- .
 
+          git reset HEAD .github
+          #git reset HEAD .vscode
+          git restore --staged .github
+          #git restore --staged .vscode
+          git add -- ':!./.github' #':!./.vscode'
+
           git commit -m "[pre-patch] Update from upstream at ${{ steps.date.outputs.RUN_DATE_TIME }}" || true
           git push origin main || true
 
@@ -122,12 +128,26 @@ jobs:
           set -x
           set -e
           git checkout main
-          git merge --no-commit --no-ff upstream/main
+
+          #git checkout -f HEAD
+          #rm .git/index
+          #git reset
+          git fsck --full --no-dangling
+
+          git merge --no-commit --no-ff upstream/main || true
+          git reset -- ./.github || true
+          #git reset -- ./.vscode || true
 
       - name: Commit & Push Changes
         run: |
           set -x
           set -e
+
+          git reset HEAD .github
+          #git reset HEAD .vscode
+          git restore --staged .github
+          #git restore --staged .vscode
+          git add -- ':!./.github' #':!./.vscode'
 
           git commit -m "[post-patch] patching at ${{ steps.date.outputs.RUN_DATE_TIME }}"
           git push origin main
