--- a/.github/workflows/apply-patches.yml
+++ b/.github/workflows/apply-patches.yml
@@ -108,6 +108,8 @@ jobs:
           set -e
           git checkout upstream/main -- .
 
+          git add .
+
           git commit -m "[pre-patch] Update from upstream at ${{ steps.date.outputs.RUN_DATE_TIME }}" || true
           git push origin main || true
 
@@ -128,6 +130,8 @@ jobs:
         run: |
           set -x
           set -e
+
+          git add .
 
           git commit -m "[post-patch] patching at ${{ steps.date.outputs.RUN_DATE_TIME }}"
           git push origin main
